--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,11 @@
   "name": "matthiasnoback/amqp-integration-patterns",
   "type": "library",
   "require": {
-    "videlalvaro/php-amqplib": "^2.6",
+    "php-amqplib/php-amqplib": "^2.6",
     "beberlei/assert": "^2.4",
-    "ramsey/uuid": "^3.2"
+    "ramsey/uuid": "^3.2",
+    "webignition/internet-media-type": "^0.4.7",
+    "icecave/semver": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
