--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~4.0",
+    "symfony/process": "^3.0"
   },
   "autoload": {
     "psr-4": {
