--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
-    "symfony/process": "^3.0"
+    "symfony/process": "^3.0",
+    "matthiasnoback/phpunit-asynchronicity": "^1.0"
   },
   "autoload": {
     "psr-4": {
